cloud/nextcloud/notifications/httproute-public/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud-push-public
spec:
  hostnames:
  - nextcloud-notifications-route.suffix-automatic-replace
  parentRefs:
  - kind: Gateway
    namespace: gateways
    name: main-public
    sectionName: https-main
  rules:
  - backendRefs:
    - kind: Service
      name: push-notifications
      port: 80
